fix: Fix dashboard legends being left-aligned to centered again

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -30,6 +30,7 @@ legend {
 	text-align: center;
 	padding: 1em;
 	padding-top: 1.5em;
+	width: 100%;
 }
 
 section {
